--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "lib": ["dom", "dom.iterable", "esnext", "webworker"],
     "moduleResolution": "node",
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "types": []
   }
 }
