--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "actor-boilerplate",
-  "version": "0.0.1",
-  "description": "A starting point for web apps based on the actor model",
-  "scripts": {
-    "copy-static": "cpx static/**/ dist/",
-    "gzip": "gzip -k9nr dist",
-    "build": "rollup -c && npm run copy-static && npm run gzip",
-    "serve": "http-server dist -c0 -g"
-  },
-  "author": "Surma <surma@google.com>",
-  "license": "BSD-3-Clause",
-  "dependencies": {
-    "actor-helpers": "git+https://github.com/PolymerLabs/actor-helpers.git#master",
-    "cpx": "^1.5.0",
-    "rimraf": "^2.6.2",
-    "rollup": "^0.66.6",
-    "rollup-plugin-loadz0r": "^0.4.1",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-terser": "^3.0.0",
-    "rollup-plugin-typescript2": "^0.17.1",
-    "typescript": "^3.1.3"
-  },
+  "name": "readylateylater",
+  "version": "1.0.0",
+  "description": "",
   "devDependencies": {
-    "http-server": "^0.11.1"
-  }
+    "clean-css": "^4.1.11",
+    "cpx": "^1.5.0",
+    "html-minifier": "^3.5.19",
+    "http-server": "^0.11.1",
+    "idb-keyval": "^3.0.5",
+    "lit-html": "^0.12.0",
+    "prettier": "^1.13.3",
+    "rimraf": "^2.6.2",
+    "rollup": "^0.62.0",
+    "rollup-plugin-babel": "^4.0.0-beta.7",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-terser": "^1.0.1",
+    "rollup-plugin-typescript2": "^0.16.1",
+    "tslint": "^5.9.1",
+    "typescript": "^3.0.1",
+    "actor-helpers": "git+https://github.com/PolymerLabs/actor-helpers.git#master"
+  },
+  "scripts": {
+    "copy-static": "cpx 'static/**/*' dist/",
+    "build": "rollup -c && npm run copy-static",
+    "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "format": "cd ../../ && npm run format",
+    "serve": "http-server -c0 dist",
+    "deploy": "npm run build && firebase deploy"
+  },
+  "author": "",
+  "license": "BSD-3-Clause"
 }
