--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,9 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "jsx": "react",
-    "jsxFactory": "h",
     "strict": true,
     "lib": ["dom", "dom.iterable", "esnext", "webworker"],
     "moduleResolution": "node",
-    "baseUrl": "./",
-    "types": []
+    "baseUrl": "./"
   }
 }
